[package]
name = "iss-sqlx-0-7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.71", default-features = false }
futures = "0.3.28"
sqlx = { version = "0.7.1", default-features = false, features = [
    "macros",
    "postgres",
    "runtime-tokio-rustls",
    "time",
] }
tokio = { version = "1.28.2", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
